--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -28,11 +28,16 @@
 \title{Hierarchical wrinkling in a confined permeable biogel}
 \author{Mathieu Leocmach\affil{1}{Universit\'e de Lyon, Laboratoire de Physique, \'Ecole Normale Sup\'erieure de Lyon, CNRS UMR 5672, 46 All\'ee d'Italie, 69364 Lyon cedex 07, France},
 Mathieu Nespoulous\affil{2}{Aix-Marseille Université, CNRS, MADIREL UMR 7246, Marseille, France},
-Sébastien Manneville\affil{1}{},
+Sébastien Manneville\affil{1}{} \and
 Thomas Gibaud\affil{1}{}}
 %\email{thomas.gibaud@ens-lyon.fr}
 
-\significancetext{ML and MN conducted preliminary experiments. ML, SM and TG designed the experiments and interpreted the results. ML and TG performed quantitative experiments. ML performed data analysis and modelling. ML, SM and TG wrote the manuscript.}
+%\contributor{Author contributions: ML and MN conducted preliminary experiments. ML, SM and TG designed the experiments and interpreted the results. ML and TG performed quantitative experiments. ML performed data analysis and modelling. ML, SM and TG wrote the manuscript.\\
+%The authors declare no conflict of interest.\\
+%This article is a PNAS Direct Submission.\\
+%To whom correspondence should be addressed. Email: thomas.gibaud@ens-lyon.fr}
+
+\significancetext{Confined thin surfaces may wrinkle due the growth of an excess of material. Here we present benchmark experiments that explore the possibility of wrinkling in biogels. We relate the excess area to the microstructural dynamics of the biogel. Usually the wrinkling wavelength is set by elasticity or gravity. In our case the wavelength is controlled by viscous flow, either in a lubrication layer or through the pores of the gel. Our results pave the way for exploring the possibility of wrinkling in confined porous soft materials immersed in a floating in a liquid such as biological tissues: during morphogenesis of the embryo the development of confined permeable and wrinkled surface is ubiquitous.}
 
 \maketitle
 
