corrige le significance statement "immersed in floating in a liquid"

--- a/fig_plis/article_SI.tex
+++ b/fig_plis/article_SI.tex
@@ -35,7 +35,7 @@ The slow acidification of caseins, a family of milk proteins, is well known to r
 \maketitle
 
 \paragraph*{Significance statement}
-Confined thin surfaces may wrinkle due the growth of an excess of material. Here we present benchmark experiments that explore the possibility of wrinkling in biogels. We relate the excess area to the microstructural dynamics of the biogel. Usually the wrinkling wavelength is set by elasticity or gravity. In our case the wavelength is controlled by viscous flow, either in a lubrication layer or through the pores of the gel. Our results pave the way for exploring the possibility of wrinkling in confined porous soft materials immersed in a floating in a liquid such as biological tissues: during morphogenesis of the embryo the development of confined permeable and wrinkled surface is ubiquitous.
+Confined thin surfaces may wrinkle due the growth of an excess of material. Here we present benchmark experiments that explore the possibility of wrinkling in biogels. We relate the excess area to the microstructural dynamics of the biogel. Usually the wrinkling wavelength is set by elasticity or gravity. In our case the wavelength is controlled by viscous flow, either in a lubrication layer or through the pores of the gel. Our results pave the way for exploring the possibility of wrinkling in porous soft materials floating in a liquid such as biological tissues: during morphogenesis of the embryo the development of confined permeable and wrinkled surface is ubiquitous.
 
 \section*{Introduction}
 
