--- a/fig_plis/article_SI.tex
+++ b/fig_plis/article_SI.tex
@@ -48,19 +48,23 @@ There are many ways and reasons for a film to wrinkle. An elastic film buckles d
 %compressive stress: kim_2011_Hierarchical folding of elastic membranes under
 
 
-Yet, benchmark experiments that explore the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium are in line, not only from a physics point of view, but also to get fundamental insights into biologically relevant situations. Indeed, stability analysis of a film lying on a thin viscous substrate was performed only recently~\cite{Huang2002} and remains theoretical because, on a free interface, gravity dominates over viscous substrate. In a biological context, however, thin tissues, e.g. epithelimum or endothelium, are naturally confined and immersed in a nearly buoyant medium, e.g. lymph, blood or mucus, a practical situation where a thin viscous substrate would set the wrinkling wavelength~\cite{Fleury2015}. Moreover, most biological films are porous, and little is known on the interplay between permeability and wrinkling~\cite{Ma2004,Longley2013}.
+Yet, benchmark experiments that explore the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium are in line, not only from a physics point of view, but also to get fundamental insights into biologically relevant situations. Indeed, stability analysis of a film lying on a thin viscous substrate was performed only recently~\cite{Huang2002} and remains theoretical because, on a free interface, gravity dominates over viscous substrate. In a biological context, however, thin tissues, e.g. epithelimum or endothelium, are naturally confined and immersed in a nearly buoyant medium, e.g. lymph, blood or mucus, a practical situation where a thin viscous substrate would set the wrinkling wavelength~\cite{Fleury2015}. Moreover, most biological films are porous, and little is known on the interplay between permeability and wrinkling~\cite{Ma2004,Longley2013}. The main goal of the present study is therefore threefold: to create a buoyancy-matched material that wrinkles, to unveil the physical origin of the observed patterns and to identify the selection mechanism of the wavelength.
 
-Here, we introduce model permeable biogels that produce hierarchical wrinkling as a result of their interplay between their gelation dynamics and the confinement conditions. In slit geometry, we slowly acidify a dispersion of caseins, a family of milk proteins. As a result, not only does the casein form a gel as expected~\cite{Roefs1986,Bremer1989,Lucey1998,Dickinson2002} --this is a well-known effect used in yoghurt making-- but the gel starts to produce wrinkling patterns in cascade when casein adhesion to the slit walls is turned off, Figure~\ref{fig:dynamics} and Supplementary Videos~\ref{vid:transmitted} and \ref{vid:reconstructed}. Using a combination of titration, rheology, light microscopy and confocal microscopy, we demonstrate that upon acidification the casein network spontaneously shrinks then swells at the micron level and wrinkles at the millimetre scale. We systematically investigate such swelling-induced wrinkling of a porous gel film sandwiched between two viscous layers, the whole system being confined between two glass plates.  The main goal of the present study is to unveil the physical origin of the observed patterns and to identify the selection mechanism of the wavelength.
+Here, we introduce model permeable biogels that produce hierarchical wrinkling as a result of their interplay between their gelation dynamics and the confinement conditions. 
+As a biogel, we use a simplified yoghurt obtained by the slow acidification of caseins, a family of milk proteins~\cite{Roefs1986,Bremer1989,Lucey1998,Dickinson2002}. While still liquid, the casein dispersion is injected in a home made optical cell that is then sealed. This cell is designed such that the casein adhesion to both top and bottom walls is turned off and so that the gel is only anchored to the remaining four sides of the cell.
+
+Although no external stimulus is exerted on the cell, we observe the spontaneous formation of a wrinkling pattern, as shown in Figure~\ref{fig:dynamics} and Supplementary Videos~\ref{vid:transmitted} and \ref{vid:reconstructed}. This pattern shows unique properties: a primary pattern appears simultaneously throughout the system with a wavelength $\lambda$  that is much smaller than the cell width $L$ and does not evolve with time. Furthermore, within this primary pattern, secondary and ternary patterns appear in cascade.
+Using a combination of titration, rheology, light microscopy and confocal microscopy, we demonstrate that the wrinkles at the millimetre scale result from the spontaneous shrinking and swelling of the casein network at the micron level upon acidification.
+
+Finally we show that the wavelength is selected by a purely viscous mechanism combining porous Darcy flow and viscous Poiseuille flow. We systematically checked that this combined model pins down the dynamical origin of the constraints exerted on the gel and nicely predicts the wrinkling wavelength under a wide range of conditions.
+
 
 \begin{figure}
 	\includegraphics{dynamics}%
-	\caption{Dynamics of pattern formation in a confined film of casein gel (caseinate 4\%w, GDL 4\%w in water). (a) Light transmission microscopy. Successive generations of patterns are highlighted in colour to stress the absence of coarsening after formation. (b) 3D reconstruction from fluorescent confocal microscopy. Scale bars are \SI{1}{\milli\metre}.}%
+	\caption{Dynamics of pattern formation in a confined film of casein gel (caseinate 4\%w, GDL 4\%w in water). (a) XXX (b) Light transmission microscopy. Successive generations of patterns are highlighted in colour to stress the absence of coarsening after formation. (c) 3D reconstruction from fluorescent confocal microscopy. Scale bars are \SI{1}{\milli\metre}. XXX lambda, L, e XXX}%
 	\label{fig:dynamics}%
 \end{figure}
 
-In the following we first describe the physical chemistry that allows us to form such patterns.
-We then show how transverse confinement leads to saturation of the amplitude on both the top and bottom walls followed by a cascade of secondary and ternary patterns. Finally we model the situation and identify two possible selection mechanisms, namely porous Darcy flow or viscous Poiseuille flow. Comparing our experimental data to these two models we show that a combination of both Darcy and Poiseuille mechanisms accurately describes our data. This combined model pins down the dynamical origin of the constraints exerted on the gel and nicely predicts the wrinkling wavelength.
-%Poiseuille~\cite{Poiseuille1842} flows of the solvent above and below the gel film for long wavelengths and a new mechanism, Darcy~\cite{Darcy1856} flows of the solvent through the gel film for short wavelengths.
 
 \section*{System design}
 
@@ -86,6 +90,26 @@ To gain further insight into the mechanical properties of the gel we turn to mic
 %XXXCe paragraphe fait-il sens ici ?XXX As seen on the confocal measurements, the gel is porous and is permeable to the solvent.  This property is determinant as it allow the gel to absorb and expel the solvent and therefore change its volume when sticky boundary are turned off. To quantify this effect, we make the casein gel inside a capillary and dip vertically the capillary in an aqueous buffer~\cite{VanDijk1986}. In the Supplementary Figure~\ref{fig:permeability}, we observe that the aqueous buffer goes through the gel and rises in the tube due to capillary forces. Exploitation of this experiment give the permeability of the gel: \SI{67000}{\square\nano\metre}.
 
 Boundary conditions is the final parameter that is essential to form wrinkled patterns. In order to turn off the adsorption of the caseins on a surface, we coat the surface with polymer brushes, see Methods, effectively creating non adhesive boundary conditions for the gel. When the casein adhesion to the upper boundary is turned off, the gel still not wrinkles because it remains attached to the bottom wall, but it detaches from the top wall. In this situation we can monitor $\xi$, Figure~\ref{fig:acidification}d. $\xi$ remains mostly constant but the volume occupied by the gel varies, as will be reported below.
+
+\section*{Wrinkling experiment}
+
+\begin{figure*}
+\includegraphics{dilation.pdf}
+\caption{The wrinkling experiment. (a) Initial configuration where the sealed cell contains an homogeneous protein solution. (b) Around the isoelectric pH, the gel forms and immediately expels solvent leading to (c). If tensile stresses were not released we would observe reversible swelling back leading to (d) a flat swollen gel layer. If tensile stresses are released, swelling back leads either to buckling (e) or to wrinkling (f) depending whether the bending is free or hindered by a transverse load.}
+\label{fig:dilation}
+\end{figure*}
+
+The wrinkling patterns shown in Figure~\ref{fig:dynamics} are obtained in home made optical cells. A cell is composed of a slit and a cover slip  coated with polymer brushes and spaced by parafilm. The cell thickness $e$ is typically \SI{100}{\micro\metre} whereas other dimensions are $L$, typically \SI{1}{\centi\metre}. The cell is filled with the casein+GDL dispersion while it is fluid, and sealed with optical UV-glue, see Methods and Figure~\ref{fig:dilation}a. In such configuration, the adhesion to both top and bottom walls is turned off and therefore as the gel forms, it is only anchored to the remaining four sides of the cell (parafilm or cured glue).
+
+As the gel forms it expels the solvent and detaches from top and bottom wall, forming a thin film sandwiched between two solvent layers. Upon swelling back, the gel spontaneously wrinkles with a wavelength $\lambda\approx\SI{1}{\milli\metre}\ll L$, see first row of Figure~\ref{fig:dynamics}. As 
+
+
+Let us examine possible scenarios upon shrinking and swelling of the gel. As the gel forms it expels the solvent and detaches from top and bottom wall, see Figure~\ref{fig:dilation}b and c. Then we consider three options. (i) In Figure~\ref{fig:dilation}d, the swelling back is reversible, only releasing tensile stresses accumulated during shrinking, and the layer remains flat. Since this case is not observed it means that in this physical gel, syn\ae{}resis and swelling processes foster irreversible stress dissipation and structural changes. In the following, we will therefore consider that the shrunk state is stress-free. 
+(ii) In Figure~\ref{fig:dilation}e, we assume that nothing hinders the buckling of the gel film. This simple buckling situation leads to a primary composed of a single bump of size $L$. As the bump amplitude grows larger saturates on the top and bottom wall, buckling of smaller wavelength appear, as observed by~\cite{Roman1999}. That is not what we observe since our primary wavelength $\lambda$ is much smaller that $L$. 
+(iii) We are left with the case of Figure~\ref{fig:dilation}f where a wrinkling pattern emerges spontaneously with a wavelength $\lambda\ll L$ selected before saturation on the top and bottom wall. To obtain such an instability, one must balance the bending rigidity of the gel film with a transverse load that hinders buckling on large wavelengths, as described for example by~\cite{Biot1957,Vella2009,Kolinski2009}.
+
+
+
 
 Finally, if the adhesion to both top and bottom walls is turned off, the film wrinkles as shown in Figure~\ref{fig:dynamics}. Such cascade buckling has already been observed in a one-dimensional macroscopic system, a sheet of steel forced to buckle between two solid plates~\cite{Roman1999}. In addition one has to note that the primary wavelength is much smaller than the size of the system, implying that a simple buckling scenario cannot explain the observations in Figure~\ref{fig:dynamics} and that only a wrinkling instability can be invoked.
 
