Caption of fig:dynamics L>1cm

--- a/fig_plis/article_SI.tex
+++ b/fig_plis/article_SI.tex
@@ -61,7 +61,7 @@ Finally we show that the wavelength is selected by a purely viscous mechanism co
 
 \begin{figure}
 	\includegraphics{dynamics}%
-	\caption{Dynamics of pattern formation in a confined film of casein gel (caseinate 4\%w, GDL 4\%w in water). (a) XXX (b) Light transmission microscopy. Successive generations of patterns are highlighted in colour to stress the absence of coarsening after formation. (c) 3D reconstruction from fluorescent confocal microscopy. Scale bars are \SI{1}{\milli\metre}. XXX lambda, L, e XXX}%
+	\caption{Dynamics of pattern formation in a confined film of casein gel (caseinate 4\%w, GDL 4\%w in water). (a) Sketch of the cell where the adhesion on both top and bottom walls is turned off. The cell is sealed and the gel is only anchored to the four sides. Typical dimensions are $L>\SI{1}{\centi\metre}$, $e\approx\SI{100}{\micro\metre}$. (b) Light transmission microscopy. Successive generations of patterns are highlighted in colour to stress the absence of coarsening after formation. The successive wavelengths are $\lambda=\SI{1.5}{\milli\metre}$ (yellow), $\lambda=\SI{0.75}{\milli\metre}$ (orange) and $\lambda=\SI{0.32}{\milli\metre}$ (brown). (c) 3D reconstruction from fluorescent confocal microscopy which highlight that patterns observed in (b) are wrinkles. The contrast in (b) is not due to thickness inhomogeneities but to altitude gradients as indicated by the yellow vertical lines in (a). Scale bars are \SI{1}{\milli\metre}.}%
 	\label{fig:dynamics}%
 \end{figure}
 
