--- a/fig_plis/article_SI.tex
+++ b/fig_plis/article_SI.tex
@@ -90,7 +90,7 @@ Based those observations, we examine possible scenarios upon shrinking and swell
 (i) In Figure~\ref{fig:dilation}d, the swelling back is reversible, only releasing tensile stresses accumulated during shrinking, and the layer remains flat, as expected from chemical gels~\cite{Kim2010}. Since this case is not observed it means that in this physical gel, syn\ae{}resis and swelling processes foster irreversible stress dissipation and structural changes. In the following, we will therefore consider that the shrunk state is stress-free. 
 
 \noindent
-(ii) In Figure~\ref{fig:dilation}e, we assume that nothing hinders the buckling of the gel film. This simple buckling situation leads to a primary pattern composed of a single bump of size $L$. As the bump amplitude grows larger saturates on the top and bottom wall, buckling of smaller wavelength may appear, as observed by~\cite{Roman1999}. That is not what we observe since our primary wavelength $\lambda$ is much smaller that $L$. 
+(ii) In Figure~\ref{fig:dilation}e, we assume that nothing hinders the buckling of the gel film. This simple buckling situation leads to a primary pattern composed of a single bump of size $L$. As the bump amplitude grows larger saturates on the top and bottom wall, buckling of smaller wavelength may appear, as observed by~\cite{Roman1999}. That is not what we observe since our primary wavelength $\lambda$ is much smaller that $L$.
 
 \noindent
 (iii) We are left with the case of Figure~\ref{fig:dilation}f where a wrinkling pattern emerges spontaneously with a wavelength $\lambda\ll L$ selected before saturation on the top and bottom wall. To obtain such an instability, one must balance the bending rigidity of the gel film with a transverse load $\sigma_{\perp}$ that hinders buckling on large wavelengths. The transverse load could be gravity~\cite{Smoluchowski1910, Kolinski2009, Vella2009, Pineirua2013, Lucantonio2013}, however we confirm that it plays no significant role by successfully repeating the wrinkling pattern in a cell held vertically, i.e. with the weight acting longitudinally rather than transversely. Furthermore, the transverse load cannot be adhesion~\cite{Vella2009a} since the film is not adhering to the top and bottom walls. Influence of the side boundaries~\cite{Vandeparre2011a, Li2013} is also excluded since the wavelength of the pattern is uniform throughout the sample. Finally as the four side boundaries remain fixed $\sigma_{\perp}$ cannot come from the resistance to uniaxial stretching~\cite{Cerda2003}.
@@ -124,31 +124,17 @@ We monitor the GDL-induced gelation with a rheometer in cone-plate geometry. As 
 
 To gain further insight into the mechanical properties of the gel we turn to microstructural observations under confocal microscopy. As shown in Supplementary Videos~\ref{vid:stick63} and \ref{vid:nostick63} and in Supplementary Figure~\ref{fig:nonmonotonic} the gel consists in a space spanning fractal network with a cut-off length scale $\xi$ that corresponds to the maximum pore size~\cite{VanDijk1986}. Permeability $\alpha$ is of the order of \SI{67000}{\square\nano\metre}, see Supplementary Figure~\ref{fig:permeability}. The fractal model fits the structure at all times but its parameters vary non monotonously during GDL acidification. As shown in Figure~\ref{fig:acidification}d and Supplementary Figure~\ref{fig:nonmonotonic}, when reaching the isolectric point $\xi$ increases up to a maximum length of \SI{7}{\micro\metre} due to the solvent expulsion out of the casein network~\cite{Lucey1998} like in viscoelastic phase separation~\cite{Tanaka2000h}. This corresponds to a tighter packing of the caseins within the network strands. Such stiffening of the strands explains the observed increase of elasticity. Beyond the isoelectric point caseins partially regain solubility, the packing within the strands loosens which results in weaker, thicker strands and smaller pores as $\xi$ decreases down to \SI{4}{\micro\metre}, hence the long-term decrease of the elastic modulus.
 
-%XXXCe paragraphe fait-il sens ici ?XXX As seen on the confocal measurements, the gel is porous and is permeable to the solvent.  This property is determinant as it allow the gel to absorb and expel the solvent and therefore change its volume when sticky boundary are turned off. To quantify this effect, we make the casein gel inside a capillary and dip vertically the capillary in an aqueous buffer~\cite{VanDijk1986}. In the Supplementary Figure~\ref{fig:permeability}, we observe that the aqueous buffer goes through the gel and rises in the tube due to capillary forces. Exploitation of this experiment give the permeability of the gel: \SI{67000}{\square\nano\metre}.
+Boundary conditions is the final parameter that is essential to form wrinkled patterns. In order to turn off the adsorption of the caseins on a surface, we coat the surface with polymer brushes, see Methods, effectively creating non adhesive boundary conditions for the gel. When the casein adhesion to the upper boundary is turned off, the gel still not wrinkles because it remains attached to the bottom wall, but it detaches from the top wall. In this situation we can monitor $\xi$, Figure~\ref{fig:acidification}d. $\xi$ remains mostly constant and variations manifests themselves at the macroscopic level, on the volume occupied by the gel.
 
-Boundary conditions is the final parameter that is essential to form wrinkled patterns. In order to turn off the adsorption of the caseins on a surface, we coat the surface with polymer brushes, see Methods, effectively creating non adhesive boundary conditions for the gel. When the casein adhesion to the upper boundary is turned off, the gel still not wrinkles because it remains attached to the bottom wall, but it detaches from the top wall. In this situation we can monitor $\xi$, Figure~\ref{fig:acidification}d. $\xi$ remains mostly constant but the volume occupied by the gel varies, as will be reported below.
-
-
+Therefore, the syn\ae{}resis and swelling back mechanism is related to charge stabilisation of the casein proteins with the pH. Such mechanism is only effective to produce wrinkle when adhesion of the caseins to both top and bottom walls is turned off.
 
 
 
 
-Finally, if the adhesion to both top and bottom walls is turned off, the film wrinkles as shown in Figure~\ref{fig:dynamics}. Such cascade buckling has already been observed in a one-dimensional macroscopic system, a sheet of steel forced to buckle between two solid plates~\cite{Roman1999}. In addition one has to note that the primary wavelength is much smaller than the size of the system, implying that a simple buckling scenario cannot explain the observations in Figure~\ref{fig:dynamics} and that only a wrinkling instability can be invoked.
 
 
-%We coat the glass slides with acrylamide brushes to prevent the adhesion of the casein. In fig.2c, when the top slide of the optical cell is coated with acrylamide brushes, we then observe that the casein network detaches from the top slide. $\xi$ does not peak at the isoelectric point but remains constant
 
-%Boundary conditions is the final parameter that is essential to form wrinkled patterns. Once the space spanning network is formed and sticks to the container, protein attraction can only proceed by local shrinking of the protein agregates, leading to larger pores.
-
-%The difference in value of $\xi$ between the fully un-coated  and the half-coated optical cell demonstrate that the gel is subject to constrains as the pH decreases. The relaxation of thoses constrain is key to the wrinkling formation when both the top and bottom slide are coated with acrylamide brushes.
-
-%on a change les condition daccroche ce aui permet au contrainte de se relacher 
-
-
-%The slow acidification of a protein (sodium caseinate) solution down to the isoelectric pH induces gelation~\cite{Bremer1989} (Fig.~\ref{fig:acidification}a). Since caseins strongly adsorb to interfaces, the resulting gel sticks to the container walls, allowing rheological measurements (Fig.~\ref{fig:acidification}b). Further decrease of the pH beyond the isoelectric point makes the casein aggregates swell (Supplementary Fig.~\ref{fig:nonmonotonic}), thus weakening the gel~\cite{Braga2006}. In a microscopy cell of slit geometry coated so that the casein cannot adsorb on the top wall, this microscopic nonmonotonic behaviour translates into little variation of the pore size $\xi$ but to solvent expulsion out of the gel phase (syn\ae{}resis) followed by global swelling (Fig.~\ref{fig:acidification}c and Supplementary Fig.~\ref{fig:nonmonotonic}).
-
-
-\section*{Models and scaling laws}
+\section*{Wavelength selection mechanism}
 
 %Longitudinally constrained swelling of the gel film is the origin and driving force of the buckling instability. The gel area becomes in excess compared to the available area, thus the gel must fold. However, this does not explains how a wavelength is selected.
 
@@ -164,7 +150,7 @@ The determination of the characteristic length $\lambda$ of a wrinkling pattern 
 
 This framework has been successfully applied to situations where $\sigma_{\perp}$ comes from the resistance of an elastic substrate ~\cite{Gough1940, Bijlaard1946}. Dealing only with (semi)infinite substrates, Biot generalised the elasticity of both the film and the substrate to viscoelasticity~\cite{Biot1957} or poroelasticity~\cite{Biot1964}, leading to time-dependent kinetic wavelength selection. Furthermore, equation~(\ref{eq:lstar}) remains valid even when $\sigma_{\perp}$ comes from the resistance to uniaxial stretching~\cite{Cerda2003}, from gravity~\cite{Smoluchowski1910, Kolinski2009, Vella2009, Pineirua2013, Lucantonio2013}, from boundaries~\cite{Vandeparre2011a, Li2013} or from adhesion~\cite{Vella2009a}.
 
-In our situation we now have to determine $\sigma_\perp$. We identify three possible candidates for the transverse load $\sigma_\perp$: the weight or buoyancy of the gel, the porous flow through the gel or the viscous flows in the surrounding solvent layers. We confirmed that gravity plays no significant role by successfully repeating the wrinkling pattern in a cell held vertically, i.e. with the weight acting longitudinally rather than transversely.
+In our situation we now have to determine $\sigma_\perp$. We have already excluded uniaxial stretching~\cite{Cerda2003}, gravity~\cite{Smoluchowski1910, Kolinski2009, Vella2009, Pineirua2013, Lucantonio2013}, boundaries~\cite{Vandeparre2011a, Li2013} and adhesion~\cite{Vella2009a}. Two possible candidates remains for the transverse load $\sigma_\perp$: the porous flow through the gel or the viscous flows in the surrounding solvent layers.
 
 
 \begin{figure*}
@@ -173,7 +159,7 @@ In our situation we now have to determine $\sigma_\perp$. We identify three poss
 	\label{fig:DarcyPoiseuille}
 \end{figure*}
 
-Therefore we consider two limit scenarios that leads to wrinkling patterns. In a first limit, the film of gel sits without sticking to the bottom wall of the cell, i.e. $H_1\rightarrow0$, see Supplementary Video~\ref{vid:cutDarcy}. Creating a two dimensional blister requires flowing solvent of viscosity $\eta$ through the gel of permeability $\alpha$. Darcy law~\cite{Darcy1856} relates the pressure gradient, $(p_2-p_1)/h$, to the volume flux per unit area $v = \frac{\alpha}{\eta}\frac{p_2-p_1}{h} = \frac{dA}{dt}$. Identifying $\sigma_{\perp}=p_2-p_1$ and injecting this expression in equation~(\ref{eq:lstar}) yields the wavelength of the Darcy mode as
+Accordingly we consider two limit scenarios that leads to wrinkling patterns. In a first limit, the film of gel sits without sticking to the bottom wall of the cell, i.e. $H_1\rightarrow0$, see Supplementary Video~\ref{vid:cutDarcy}. Creating a two dimensional blister requires flowing solvent of viscosity $\eta$ through the gel of permeability $\alpha$. Darcy law~\cite{Darcy1856} relates the pressure gradient, $(p_2-p_1)/h$, to the volume flux per unit area $v = \frac{\alpha}{\eta}\frac{p_2-p_1}{h} = \frac{dA}{dt}$. Identifying $\sigma_{\perp}=p_2-p_1$ and injecting this expression in equation~(\ref{eq:lstar}) yields the wavelength of the Darcy mode as
 \begin{equation}
 \lambda_D \sim h^{1/2} \alpha^{1/4} \Upsilon^{1/4}
 \end{equation}
