Caption de fig:sketchDP

--- a/fig_plis/article_SI.tex
+++ b/fig_plis/article_SI.tex
@@ -136,6 +136,12 @@ Therefore, the syn\ae{}resis and swelling back mechanism is related to charge st
 
 \section*{Wavelength selection mechanism}
 
+\begin{figure}
+\includegraphics{sketch_Darcy_Poiseuille.pdf}
+\caption{Sketch of the two limit scenarios for the wavelength selection. In both cases the gel film of thickness $h$ is destabilised by the excess area a give rise to wrinkles of amplitude $A(t)$ and wavelength $\lambda$. The value of $\lambda$ is set by the interplay between the bending rigidity $B$ and a transverse load $\sigma_\perp$ due to a pressure gradient $p_2-p_1$ in the solvent of viscosity $\eta$. (a) Darcy scenario: the gel initially sits without sticking to the bottom wall. $\sigma_\perp$ is due to the flow of the solvent through the porous gel of permeability $\alpha$ to fill the growing blister. (b) Poiseuille scenario: the gel film of negligible porosity is initially in the middle of the cell, separated by a distance $H$ from each wall. $\sigma_\perp$ is due to the lubrication flow in the top and bottom solvent layers.}
+\label{fig:sketchDP}
+\end{figure}
+
 %Longitudinally constrained swelling of the gel film is the origin and driving force of the buckling instability. The gel area becomes in excess compared to the available area, thus the gel must fold. However, this does not explains how a wavelength is selected.
 
 The determination of the characteristic length $\lambda$ of a wrinkling pattern is an old problem. Large deformations of thin sheets is governed by F\"{o}ppl-von K\'arm\'an equations~\cite{landau1986}, which are essentially impossible to solve in analytical form. However using scaling and asymptotic arguments one can obtain the dominant wavelength of the wrinkling pattern up to dimensionless prefactors and isolate the physically meaningful ingredients~\cite{Cerda2003}. An elastic film buckles due to excess area with respect to its boundaries. Wrinkling is a buckling hindered by a substrate: the mismatch of elastic properties between the film and the substrate selects the preferred wrinkling wavelength~\cite{Gough1940, Bijlaard1946}. $\lambda$ is then set by the competition between the flexural modulus of the film $B=E/(1-\nu^2)$ ($E$ Young modulus, $\nu$ Poisson ratio) and a transverse load $\sigma_\perp$. For small deflections of  amplitude $A$, $\lambda$ scales as~\cite{Vella2009,Kolinski2009}: 
