--- a/fig_plis/article_SI.tex
+++ b/fig_plis/article_SI.tex
@@ -75,12 +75,12 @@ The dynamics of the pattern formation is followed by light transmission microsco
 
 Extracting the top and bottom surface of the gel phase allows for quantitative measurements of the relative volume, Figure~\ref{fig:sideview}b, and excess surface area of the gel film, Figure~\ref{fig:sideview}c, see Supplementary Methods. The evolution of the gel volume is surprisingly non-monotonous. After reaching a minimum around 35\% of its initial value at \SI{23}{\minute}, the volume increases. Shortly after, at \SI{36}{\minute}, the planar film destabilises and starts to wrinkle in the $z$-direction creating excess area. This confirms that the instability leading to the primary pattern is due to swelling. Around \SI{38}{\minute}, the amplitude of the wrinkles reaches the thickness of the slit. As swelling continues, the gel flattens on both top and bottom walls (\SI{44}{\minute}) and finally buckles back (\SI{53}{\minute}) to form the secondary pattern (\SI{1}{\hour}21). When the excess area saturates, the dynamics stop (\SI{3}{\hour}). We note that at any given point in time the thickness $h$ of the film of gel is spatially homogeneous.
 
-The pattern formation is dynamic in essence. In Figure XXX, we thus report the velocity $v(t)$ of the wrinkles as it develops in the $z$-direction, see Supplementary Methods for the definition. We observe that the velocity peaks at different times corresponding to the syn\ae{}resis and the respective growths of the primary, secondary and tertiary patterns. We associate each growth with a characteristic time $\tau = e/v_\text{max}$. For example, in the present case the $\tau$ corresponding to the primary pattern is $\SI{123}{\second}$.
+The pattern formation is dynamic in essence. In Figure~\ref{fig:sideview}d, we thus report the velocity $v(t)$ of the wrinkles as it develops in the $z$-direction, see Supplementary Methods for the definition. We observe that the velocity peaks at different times corresponding to the syn\ae{}resis and the respective growths of the primary, secondary and tertiary patterns. We associate each growth with a characteristic time $\tau = e/v_\text{max}$. For example, in the present case the $\tau$ corresponding to the primary pattern is $\SI{123}{\second}$.
 
 
 \begin{figure}
 	\includegraphics{sideview}
-	\caption{Measurements and modelling. (a) Confocal $(x,z)$ cuts showing syn\ae{}resis, swelling, wrinkling and cascade buckling. The scale bar is \SI{100}{\micro\metre} (real size ratio). (b) Schematic side view of the cell. The constant thickness gel film (orange) is surrounded by solvent. Yellow lines show the path of transmitted light through the gel phase. (c-d) Confocal microscopy measurement of the volume of the gel phase relative to cell volume and excess area. Crosses correspond to times in (a).}
+	\caption{3D analysis of the wrinkling process. (a) Confocal $(x,z)$ cuts showing syn\ae{}resis, swelling, wrinkling and cascade buckling. The scale bar is \SI{100}{\micro\metre} (real size ratio). (b-d) Confocal microscopy measurement of the volume of the gel phase relative to cell volume, the excess area and the velocity along the $z$-direction. Crosses correspond to times in (a).}
 	\label{fig:sideview}
 \end{figure}
 
